--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "snowpack-plugin-stylus": "^1.0.6"
   },
   "dependencies": {
+    "@ppzp/time": "file:../time.js/ppzp-time-0.0.0.tgz",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
