--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@ppzp/react",
   "version": "0.0.0",
   "description": "",
-  "files": "build",
+  "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "snowpack": "^3.8.8",
-    "snowpack-plugin-stylus": "^1.0.6"
+    "rollup": "^2.62.0"
   },
   "dependencies": {
     "@ppzp/time": "file:../time.js/ppzp-time-0.0.0.tgz",
