--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "style": "stylus ./src/",
+    "style": "stylus -w ./src/",
     "dev": "snowpack dev"
   },
   "keywords": [],
@@ -11,11 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "@ppzp/stylus": "0.0.1",
-    "snowpack": "^3.8.8"
+    "snowpack": "^3.8.8",
+    "stylus": "^0.56.0"
   },
   "dependencies": {
     "@ppzp/react": "file:../react/ppzp-react-0.0.0.tgz",
-    "@ppzp/style": "file:../style/ppzp-style-0.0.0.tgz",
     "react": "^17.0.2"
   }
 }
