--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "stylus": "^0.56.0"
   },
   "dependencies": {
-    "@ppzp/style": "file:../style/ppzp-style-0.0.0.tgz",
-    "@ppzp/time": "file:../time.js/ppzp-time-0.0.0.tgz",
-    "@ppzp/utils": "file:../utils.js/ppzp-utils-0.0.0.tgz",
+    "@ppzp/style": "0.0.0",
+    "@ppzp/utils": "0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
