--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@ppzp/react",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
+  "main": "bundle.js",
   "files": [
     "bundle.js"
   ],
