--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "@ppzp/react",
   "version": "0.0.1",
   "description": "",
-  "main": "bundle.js",
-  "files": [
-    "bundle.js"
-  ],
-  "keywords": [],
-  "author": "",
+  "main": "index.js",
+  "keywords": ["react", "ppz"],
+  "author": "gy",
   "license": "ISC",
   "scripts": {
-    "compile": "rollup -c"
+    "compile": "rollup -c",
+    "demo": "rollup -c && rollup -w -c ./demo/rollup.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -18,6 +16,8 @@
     "@ppzp/stylus": "0.0.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.1",
+    "@rollup/plugin-replace": "^3.0.1",
     "rollup": "^2.62.0",
     "rollup-plugin-styles": "^3.14.1",
     "stylus": "^0.56.0"
