--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "keywords": ["react", "ppz"],
+  "keywords": [
+    "react",
+    "ppz"
+  ],
   "author": "gy",
   "license": "ISC",
   "scripts": {
@@ -23,7 +26,7 @@
     "stylus": "^0.56.0"
   },
   "dependencies": {
-    "@ppzp/style": "0.0.0",
+    "@ppzp/style": "0.0.1",
     "@ppzp/utils": "0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
