--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-replace": "^3.0.1",
     "rollup": "^2.62.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-styles": "^3.14.1",
     "stylus": "^0.56.0"
   },
